# layersense

./: .env.template  .gitignore  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  justfile  pyproject.toml  requirements.in  requirements.txt
assets/example_json/: example_circle_rectangle_freeform.json  example_rectangle_other_rectangle.json
src/layersense/: main.py
src/layersense/agents/: agent.py
src/layersense/api/v1/: __init__.py
src/layersense/api/v1/endpoints/: animate_scene.py
src/layersense/models/: base.py  scene.py
